# fastapi_scaffold

./: .gitignore  pyproject.toml  requirements.txt
dummy_project/: config.py  errors.py  main.py
dummy_project/api/: __init__.py  authenticate.py  teams.py  users.py  users_credentials.py
dummy_project/authorize/: __init__.py
dummy_project/crud/: common.py  credentials.py  ldap.py  mixins.py  teams.py  users.py
dummy_project/model/: common.py  credentials.py  oauth.py  teams.py  users.py
dummy_project/oauth/: __init__.py  authenticate.py
