[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "dummy_project"
version = "0.0.0"
requires-python = ">=3.9"
authors = [
  {name = "Stephan.Schultchen", email = "stephan.schultchen@gmail.com"},
]
description = "PyppedDB is a Python replacment for PuppetDB"
dynamic = ["dependencies"]
license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
dummy_project = "dummy_project:main.main"

[tool.hatch.build.targets.wheel]
packages = ["dummy_project"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

